extended theading library to include more general use  classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.9)
 project(threadpool)
 
 file(GLOB SOURCES "*.cpp")
+file(GLOB THREADING "threading/*.cpp")
 
-add_library(threadpool STATIC ${SOURCES})
+add_library(threadpool STATIC ${SOURCES} ${THREADING})
