--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.9)
-project(threadpool)
+project(small-tl)
 
 file(GLOB SOURCES "*.cpp")
 file(GLOB THREADING "threading/*.cpp")
+file(GLOB UTF "utf/*.cpp")
 
-add_library(threadpool STATIC ${SOURCES} ${THREADING})
+add_library(small-tl STATIC ${SOURCES} ${THREADING} ${UTF})
